--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,2 @@
-include README.md CHANGELOG.md LICENSE requirements.txt TODO.md fabfile.py sirius.sh
+include README.md CHANGELOG.md LICENSE requirements.txt TODO.md
+include sirius_fabfile.py
